k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: k8s-web-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: k8s-web-app

  template:
    metadata:
      labels:
        app: k8s-web-app
      

    spec:
      serviceAccountName: k8s-web-app
      imagePullSecrets:
        - name: ghcr-secret
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
           type: RuntimeDefault

      containers:
        - name: web-app
          image: ghcr.io/yasser1azizi/k8s-web-app@sha256:0acaca723713d874281c72e6861d393c14b0560026c40d86b0a636cb57159651
          imagePullPolicy: IfNotPresent

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL

          ports:
            - containerPort: 8000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
