k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  securityContext:
    runAsNonRoot: true

  containers:
    - name: frontend
      image: nginx:alpine

---

apiVersion: v1
kind: Pod
metadata:
  name: web-app
  labels:
    app: web-app
spec:

  spec:
  securityContext:
    runAsNonRoot: true

  containers:
    - name: web-app
      image: nginx:alpine

---

apiVersion: v1
kind: Pod
metadata:
  name: database
  labels:
    app: database
spec:
  securityContext:
    runAsNonRoot: true

  containers:
    - name: database
      image: nginx:alpine
