k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: k8s-web-app-service

spec:
  selector:
    app: k8s-web-app

  ports:
    - port: 80
      targetPort: 8000

  type: NodePort
