k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: k8s-web-app-network-policy
spec:
  podSelector:
    matchLabels:
      app: k8s-web-app

  policyTypes:
    - Ingress
    - Egress

  ingress:
   - from:
      - podSelector: {}

     ports:
      - protocol: TCP
        port: 8000


  egress:
    - to:
