k8s/kyverno-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: require-non-root

spec:
  validationFailureAction: Enforce

  rules:
    - name: check-run-as-non-root

      match:
        any:
          - resources:
              kinds:
                - Pod

      validate:
        message: "Pods must run as non-root."

        pattern:
          spec:                                                                                   
            securityContext:
              runAsNonRoot: true
